src/NewGame/styles.css
.newGameWrapper,
.newGame{
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.newGame .action-button{
    border-color: transparent !important;
    margin-left: -0.4em;
}

.newGameWrapper{
    background: rgba(0, 0, 0, 0.4);
    position: relative;
}

.newGame{
    padding-top: 60px;
    background: #fff;
    height: calc(100*var(--vh));
    width: 100vw;
    z-index: 9999;
    overflow-y: auto;
}

.newGameContent{
    width: 100%;
}

.new-game-item{
    padding: 1em;
}

.new-game-item > button{
    background: transparent;
    border: none;
    outline: none;
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    transform: rotate(15deg);
}

.new-game-item:not(.new-game-tiles){
    min-height: 55px;
    padding-bottom: 0.6em;
    border-bottom: 1px solid #eee;
}

.new-game-tiles{
    padding-top: 1.7em;
    position: relative;
    margin-bottom: 4em;
}

.new-game-tiles > button{
    position: absolute;
    right: 1em;
    top: 0.5em;
}

.new-game-item:first-of-type{
    margin-top: 0.5em;
    margin-bottom: 0.2em;
    padding-bottom: 0;
}

.new-game-item label{
    color: #606060;
    display: block;
    transform: translateY(-10px);
}

.theme-item{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 0.5em;
}

.theme-item div div{
    display: flex;
    align-items: center;
    margin-bottom: 0.3em;
}

.theme-item .color-box{
    display: block;
    width: 30px;
    height: 30px;
}

.theme-item .color-box:first-child{
    transform: rotate(-15deg);
    position: relative;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
}

.theme-item .color-box:last-child{
    transform: translateX(-25%) translateY(15%);
    z-index: -1;
}

.point-picker div{
    padding-bottom: 0.2em;
    margin-right: -0.5em;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.point-picker button{
    outline: none;
    position: relative;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    margin-right: 1em;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1em;
    color: #555;
    line-height: 0;
    letter-spacing: 0.1em;
    background: transparent;
    border: 1px solid #aaa;
    padding: 0.5em 1em;
}

.point-picker button:not(:last-of-type):after{
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    height: 2px;
    margin: auto 0;
    left: 100%;
    width: 1em;
    background: #ddd;
}

.point-picker button.selected{
    background: #555;
    color: #fff;
    border-color: transparent;
}

#startButton{
    position: fixed;
    bottom: 16px;
    right: 16px;
    font-size: 1.1em;
    display: block;
    padding: 0.5em 1.2em;
    padding-right: 0.7em;
    overflow: hidden;
    border-radius: 35px;
    background: #333;
    color: #fff;
    border: 1px solid #ccc;
    outline: none;
    z-index: 90;
}

#startButton span{
    display: flex;
    align-items: center;
    line-height: 0;
}

#startButton span svg{
    margin-left: 0.6em;
}

#startButton.disabled,
#startButton.loading{
    background: #555;
    color: #777;
    pointer-events: none;
}

#startButton.loading span{
    opacity: 0.55;
    pointer-events: none;
}

#startButton > svg{
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    width: 30px;
    height: 30px;
    stroke: #777;
}

#startButton svg circle{
    stroke: #777
}

.opponents-loader{
    min-height: 180px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 0.9em;
}

.opponents-loader svg{
    margin-bottom: 1.3em;
    width: 50px;
    height: 50px;
}

.opponents-loader svg circle{
    stroke-width: 2px;
}

.opponent-choice{
    position: relative;
    padding: 0.6em 0.75em;
    display: flex;
    align-items: center;
    font-size: 1.3em;
    width: 100%;
    background: transparent;
    border: none;
}

.opponent-choice.small{
    padding: 0;
}

.opponent-choice:not(.small):first-of-type{
    margin-top: 0.5em;
}

.opponent-choice:not(:last-child):after{
    position: absolute;
    content: '';
    left: 75px;
    right: 10px;
    height: 1px;
    bottom: 0;
    background: #eee;
}

.opponent-choice img{
    width: 40px;
    height: 40px;
    border-radius: 50%;
    margin-right: 1em;
    background: #ddd;
}

.opponent-choice.small img{
    width: 28px;
    height: 28px;
    margin-right: 0.5em;
}

